--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development webpack",
+    "start": "cross-env NODE_ENV=development webpack serve --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "repository": {
@@ -23,7 +23,7 @@
     "url": "https://github.com/Wood1ouse/Custom-Excel/issues"
   },
   "homepage": "https://github.com/Wood1ouse/Custom-Excel#readme",
-  "browserslist": "> 0.25%, not dead",
+  "browserslist": ">0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -37,6 +37,11 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "mini-css": "^1.0.3"
   }
 }
