--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://Wood1ouse.github.io/excel",
   "name": "excel-course",
   "version": "1.0.0",
   "description": "Pure JS Excel Application",
   "main": "webpack.config.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack serve --open",
     "build": "cross-env NODE_ENV=production webpack --mode production",
@@ -23,7 +26,6 @@
   "bugs": {
     "url": "https://github.com/Wood1ouse/Custom-Excel/issues"
   },
-  "homepage": "https://github.com/Wood1ouse/Custom-Excel#readme",
   "browserslist": ">0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -45,6 +47,7 @@
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "eslint-webpack-plugin": "^2.5.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
     "sass": "^1.32.5",
